[package]
name = "tynamed"
version = "0.1.1"
edition = "2024"

authors = ["Ykong <yk0n9@outlook.com>"]
license = "MIT"

description = "A macro that gives a name to a struct or enum"
keywords = ["string", "macros", "proc-macros", "struct"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = "https://docs.rs/tynamed"
repository = "https://github.com/yk0n9/tynamed"
readme = "README.md"

[dependencies]
tynamed_macros = { path = "tynamed_macros", version = "0.1.1" }
