[package]
name = "tynamed_macros"
version = "0.1.0"
edition = "2024"

authors = ["Ykong <yk0n9@outlook.com>"]
license = "MIT"

description = "A macro that gives a name to a struct or enum"
keywords = ["string", "macros", "proc-macros", "struct"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = "https://docs.rs/tynamed"
repository = "https://github.com/yk0n9/tynamed"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
quote = "1"
syn = { version = "2", features = ["full"] }
